(DOP-1639): remove reST from code-block captions

--- a/source/includes/steps-configure-custom-function-auth-import-export.yaml
+++ b/source/includes/steps-configure-custom-function-auth-import-export.yaml
@@ -103,7 +103,7 @@ content: |
   authentication function:
 
   .. code-block:: json
-     :caption: ``/auth_providers/custom-function.json``
+     :caption: /auth_providers/custom-function.json
      :emphasize-lines: 5
 
      {
