--- a/source/includes/steps-host-a-single-page-application-code-deploy.yaml
+++ b/source/includes/steps-host-a-single-page-application-code-deploy.yaml
@@ -44,7 +44,7 @@ content: |
   save the file when you're done.
 
   .. code-block:: json
-     :caption: ``config.json``
+     :caption: config.json
   
      "hosting": {
        "enabled": true,
