(DOCSP-13012): Update lingering generic admonitions

--- a/source/includes/steps-tutorial-android-kotlin.yaml
+++ b/source/includes/steps-tutorial-android-kotlin.yaml
@@ -471,7 +471,7 @@ content: |
   - Navigate to *second@example.com*'s project
   - Collaborate by adding, updating, and removing some new tasks
 
-  .. admonition:: Reminder
+  .. tip::
    
      If something isn't working for you, you can check out the ``final`` branch of 
      this repo to compare your code with our finished solution.
