(DOCSP-11416): Convert Toctree to Snooty-Compatible IA

--- a/snooty.toml
+++ b/snooty.toml
@@ -12,12 +12,15 @@ toc_landing_pages = [
   "/tutorial",
   # Cloud
   "/authentication",
+  "/authentication/providers",
   "/mongodb",
   "/sync",
   "/graphql",
   "/functions",
   "/triggers",
   "/services",
+  "/services/http",
+  "/services/twilio",
   "/hosting",
   "/values-and-secrets",
   "/deploy",
@@ -27,7 +30,8 @@ toc_landing_pages = [
   "/ios",
   "/node",
   "/react-native",
-  "/web"
+  "/web",
+  "/dotnet"
 ]
 
 [substitutions]
